fixed a tags alignment with H1

--- a/css/sidenav-sub.css
+++ b/css/sidenav-sub.css
@@ -14,11 +14,6 @@
     background-color: #e6e6e6;
 }
 
-.classes-subnav ul {
-    padding-left: 0;
-    margin-left: 0 !important;
-}
-
 .classes-subnav h1 {
     font-size: 1.5rem !important;
     margin-bottom: 1rem;
@@ -28,12 +23,13 @@
     margin-top: -1px !important;
     border-bottom: 1px solid lightgrey;
     color: grey;
+    margin-left: -2rem !important;
 }
 
 .classes-subnav li a:hover {
     background-color: #d9d9d9 !important;
     border-radius: 5px;
-    transform: scale(1.1);
+    /* transform: scale(1.1); */
     transition: .15s;
     color: #6699cc;
 }
